--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styleV3.css">
-    <link rel="stylesheet" href="/To-do/fontawesome-free-6.7.2-web/css/all.css">
-    <link rel="shortcut icon" href="/To-do/favicone.webp" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="all.css">
+    <link rel="shortcut icon" href="favicone.webp" type="image/x-icon">
     <title>To-do</title>
-    <script src="scriptV3.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <main>
@@ -103,4 +103,5 @@
         </div>
         
     </section>
+
 </body>
